# heatEquationVisualization

./: CMakeLists.txt  README.md  doxyfile  times.txt
docs/: _broker_8cpp.html  _broker_8cpp__incl.map  _broker_8cpp__incl.md5  _broker_8h.html  _broker_8h__dep__incl.map  _broker_8h__dep__incl.md5  _broker_8h__incl.map  _broker_8h__incl.md5  _broker_8h_source.html  _color_map_8h.html  _color_map_8h__dep__incl.map  _color_map_8h__dep__incl.md5  _color_map_8h__incl.map  _color_map_8h__incl.md5  _color_map_8h_ac7347cea381b129f646bb601a27f0a02_icgraph.map  _color_map_8h_ac7347cea381b129f646bb601a27f0a02_icgraph.md5  _color_map_8h_source.html  _config_8cpp.html  _config_8cpp__incl.map  _config_8cpp__incl.md5  _config_8h.html  _config_8h__dep__incl.map  _config_8h__dep__incl.md5  _config_8h__incl.map  _config_8h__incl.md5  _config_8h_source.html  _controls_renderer_8cpp.html  _controls_renderer_8cpp__incl.map  _controls_renderer_8cpp__incl.md5  _controls_renderer_8h.html  _controls_renderer_8h__dep__incl.map  _controls_renderer_8h__dep__incl.md5  _controls_renderer_8h__incl.map  _controls_renderer_8h__incl.md5  _controls_renderer_8h_source.html  _element_8cpp.html  _element_8cpp__incl.map  _element_8cpp__incl.md5  _element_8h.html  _element_8h__dep__incl.map  (+918 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  enums_0.js  enums_1.js  (+72 more)
include/glad/: glad.h
include/imgui/: imstb_truetype.h
lib/glad/: glad.c
lib/imgui/: imgui.cpp  imgui_impl_glfw.cpp  imgui_widgets.cpp
src/: main.cpp
src/config/: Config.cpp  Config.h  config.h
src/events/: Broker.cpp  Broker.h  Event.h  EventTypes.h  ISubscriber.h
src/manager/: MaterialManager.cpp  MaterialManager.h
src/models/: Element.cpp  Element.h  Grid.cpp  Grid.h  Material.cpp  Material.h  Node.cpp  Node.h  Particle.cpp  Particle.h  Point.h
src/solver/: HeatSolver.cpp  HeatSolver.h  ISolver.h  SmoothingKernel.cpp  SmoothingKernel.h  Solver.cpp  Solver.h  WaterSolver.cpp  WaterSolver.h
src/threads/: ThreadPool.cpp  ThreadPool.h  ThreadWrapper.h
src/ui/: ColorMap.h  Config.h  ControlsRenderer.cpp  ControlsRenderer.h  GridRenderer.cpp  GridRenderer.h  IRenderComponent.h  Renderer.cpp  Renderer.h  Roboto-Regular.h  SimulationController.cpp  SimulationController.h  StyleManager.cpp  StyleManager.h  UI.cpp  UI.h  UIManager.cpp  UIManager.h  WindowManager.cpp  WindowManager.h
test/: CMakeLists.txt  grid_tests.cpp
test/lib/docs/: advanced.md  gmock_cook_book.md  gmock_faq.md  gmock_for_dummies.md  pkgconfig.md
test/lib/docs/_layouts/: default.html
test/lib/docs/reference/: testing.md
